# message-triage-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/evaluation/: __init__.py  aggregator.py  judge.py  reporter.py  rubric.py  run_evaluation.py  storage.py
backend/examples/: inputs.json
backend/scripts/: run_examples.py
backend/src/triage/: __init__.py  api.py  classifier.py  config.py  extractors.py  logging_setup.py  prompts.py  providers.py  schemas.py
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_classifier.py  test_extractors.py  test_judge.py  test_schemas.py
docs/: architecture.md  evaluation.md  processo_desenvolvimento_ia.md  prompt_engineering.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: CalibrationHeatmap.tsx  CategoryBreakdown.tsx  ClassificationForm.tsx  ClassificationResult.tsx  Layout.tsx  MetricCard.tsx  RunReportsControl.tsx  ScoreTimeline.tsx
frontend/src/lib/: labels.ts
storage/evaluations/: eval_2026-07-16_055721_gemini-flash-latest.json  eval_2026-07-16_055745_gemini-flash-latest.json  eval_2026-07-16_055823_gemini-flash-latest.json
storage/runs/: run_2026-07-16_050434_nogit.json  run_2026-07-16_050830_nogit.json  run_2026-07-16_050928_nogit.json  run_2026-07-16_051041_nogit.json  run_2026-07-16_051235_nogit.json
(+3 files in other folders)
