[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-triage-agent"
version = "0.1.0"
description = "Structured LLM-based triage for business messages."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "anthropic",
    "google-genai",
    "openai",
    "python-dotenv",
    "structlog",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage", "evaluation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()` in argument defaults is the intended idiom.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Prompt text is inherently long (few-shot examples, system prompt).
"src/triage/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q --cov=triage --cov=evaluation --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
